--- a/Chalkable.Web/assets/sass/partials/main/sysadmin/_apps.scss
+++ b/Chalkable.Web/assets/sass/partials/main/sysadmin/_apps.scss
@@ -22,6 +22,12 @@ BODY {
                     }
 
                   }
+
+                  .app-icon{
+                    width: 24px;
+                    height: 24px;
+                    }
+                  }
                 }
               }
             }
@@ -29,4 +35,3 @@ BODY {
         }
     }
   }
-}
