--- a/Chalkable.Web/assets/jade/activities/apps/Apps.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/Apps.jade
@@ -1,10 +1,9 @@
 mixin AppManagementControls(id, state)
-    if state != chlk.models.apps.AppStateEnum.SUBMIT_FOR_APPROVE
+    if state.getStateId() != chlk.models.apps.AppStateEnum.SUBMIT_FOR_APPROVE
         span=state.toString()
     else
         +ActionLink('apps', 'approve', id).btn Approve
         +ActionLink('apps', 'decline', id).btn Decline
-        +ActionLink('a', 'b', 'c').btn Test
 
 .apps-list
     +Grid('apps', 'page', self).not-transparent
@@ -18,7 +17,9 @@ mixin AppManagementControls(id, state)
         +GridBody()
             each item in self.items
                 +GridRow()
+                    pictureLink = item.getSmallPictureId() ? self.getPictureURL(item.getSmallPictureId(), 74) : '#'
                     .td
+                        img.app-icon(src=pictureLink)
                     .td= item.getName()
                     .td= item.getShortDescription()
                     .td.app-state
