--- a/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
@@ -56,6 +56,25 @@ BODY {
                       }
                     }
 
+                    .price-elem{
+                      display: inline-block;
+                      font-weight: normal;
+                      font-size: 12px;
+                      color: #444;
+                      margin-bottom: 12px;
+                      margin-top: 15px;
+
+
+                      .slide-checkbox{
+                        margin-left: 57px;
+                      }
+
+                      span{
+                        width: 290px;
+                        display: inline-block;
+                      }
+                    }
+
                   }
 
                   .elem{
@@ -89,6 +108,10 @@ BODY {
 
                     &.icons{
                       margin-top: 15px;
+
+                      .icon{
+                        float: left;
+                      }
                     }
 
                     .icons, .screenshots{
