--- a/Chalkable.Web/assets/jade/activities/school/Schools.jade
+++ b/Chalkable.Web/assets/jade/activities/school/Schools.jade
@@ -15,7 +15,7 @@
             each item in self.items.getItems()
                 +GridRow()
                     .td= item.getName()
-                    .td= item.getId()
+                    .td= item.getId().valueOf()
                     .td= item.getSchoolType()
                     .td= item.getSchoolUrl()
                     .td.action-links
