--- a/Chalkable.Web/assets/jade/activities/people/UsersForGrid.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersForGrid.jade
@@ -2,7 +2,7 @@ each item, i in self.getItems()
     -index = item.getIndex ? (item.getIndex() || i) : i;;
     .row(class=(index == 0 ? 'selected' : ''), index=index)
         +ActionLink('students', 'info', item.getId().valueOf()).left.image-container.white.shadow
-            img.avatar.avatar47(class=item.getGender(), src=item.getPictureUrl())
+            +PersonImg(item, 47)
         p.left= item.getFullName()
         .right
             +Button().message-button.blue-gradient-btn Message
