--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/MonthDayPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/MonthDayPopUp.jade
@@ -8,7 +8,7 @@
                 each item in announcements
                     li.items
                         //A(href="#announcement/view/" + item.getId().valueOf()).pop-up-announcement
-                        +ActionLink('announcement', 'view', item.getId()).pop-up-announcement
+                        +ActionLink('announcement', 'view', item.getId())(class="announcement-type-" + item.getAnnouncementTypeId()).pop-up-announcement
                             div
                                 p.title=item.getTitle()
                                 p.under=item.getClassName() || item.getPersonName()
@@ -18,7 +18,7 @@
             ul.day-items
                 each item in items
                     li(class="announcement-type-" + item.getAnnouncementTypeId().valueOf()).items
-                        +ActionLink('announcement', 'view', item.getId()).pop-up-item
+                        +ActionLink('announcement', 'view', item.getId())(class="announcement-type-" + item.getAnnouncementTypeId()).pop-up-item
                             div
                                 p.item-title=item.getTitle()
                                 p.classname-under=item.getClassName()
