--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekBarPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekBarPopUp.jade
@@ -7,7 +7,7 @@
                 each item in announcements
                     li.items
                         //A(href="#announcement/view/" + item.getId().valueOf()).pop-up-announcement
-                        +ActionLink('announcement', 'view', item.getId()).pop-up-announcement
+                        +ActionLink('announcement', 'view', item.getId())(class="announcement-type-" + item.getAnnouncementTypeId()).pop-up-announcement
                             div
                                 p.title=item.getTitle()
                                 p.classname-under=item.getClassName() || item.getPersonName()
