--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekDayPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekDayPopUp.jade
@@ -5,8 +5,8 @@
     if announcements.length > 0
         .class-name
             h3.day-day
-                //todo add link to the class
-                a=announcements[0].getClassName()
+                clazz = announcementclassperiod.getClassPeriod().getClazz();
+                +ActionLink('class', 'details', announcements[0].getClassId().valueOf())=announcements[0].getClassName()
     .info
         if roomNumber
             p.day-down
@@ -23,7 +23,7 @@
             ul.day-announcements
                 each item in announcements
                     li.items
-                        +ActionLink('announcement', 'view', item.getId()).pop-up-announcement
+                        +ActionLink('announcement', 'view', item.getId())(class="announcement-type-" + item.getAnnouncementTypeId()).pop-up-announcement
                             div
                                 p.item-title #{item.getAnnouncementTypeName()} #{item.getOrder()}
     +ActionLink('announcement', 'add').ann-button.plus-ann
