--- a/Chalkable.Web/assets/jade/activities/feed/Feed.jade
+++ b/Chalkable.Web/assets/jade/activities/feed/Feed.jade
@@ -18,7 +18,7 @@
                                     .tooltip-content
                                         Tooltip
                                 .attachment
-                                    .icon.blue.icon.announcements-type-7
+                                    div(class="announcement-type-" + item.getAnnouncementTypeId()).icon.blue
                                     .icon.black
                                     h2.animated-header=item.getSubject()
                                     p.animated=item.getShortContent()
