--- a/Chalkable.Web/assets/sass/partials/main/_profile.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_profile.scss
@@ -25,6 +25,59 @@ BODY {
     >DIV#content {
       DIV#content-wrapper.profile{
         #main{
+          .summary-page{
+            margin: 0 -28px;
+            padding: 16px 11px 0 13px;
+          }
+
+          .periods-link {
+            display: inline-block;
+            text-align: center;
+            color: #957633;
+            text-decoration: none;
+            vertical-align: top;
+            position: relative;
+            z-index: 100;
+            width: 75px;
+            height: 82px;
+
+            .announcement-box {
+              position: relative;
+              z-index: 98;
+              width: 55px;
+              padding-left: 20px;
+              height: 67px;
+
+              .announcement {
+                position: absolute;
+                height: 48px;
+                width: 48px;
+              }
+            }
+
+            .period-box {
+              padding: 6px 2px 2px 2px;
+              width: 66px;
+              text-align: center;
+              position: absolute;
+              text-shadow: 0 1px 0 white;
+              height: 18px;
+              line-height: 0;
+              bottom: 0;
+              left: 0;
+              white-space: nowrap;
+              z-index: 100;
+              background: url(images/profile/course-container.png) 0 0 no-repeat;
+
+              .day{
+                font: normal 12px Arial;
+                text-align: center;
+                width: 43px;
+                text-shadow: 0 1px 0 white;
+              }
+            }
+          }
+
           .gradient{
             @include background(linear-gradient(top, #f3eee0, #ece1c1));
             border-top: 1px solid #fff;
@@ -36,6 +89,121 @@ BODY {
           .pacifico {
             font-family: Pacifico;
             font-weight: normal;
+          }
+
+          .class-profile{
+            .glance-container{
+              .glance-box {
+                height: 119px;
+                cursor: pointer;
+
+                P {
+                  font: bold 14px Arial;
+                  white-space: normal;
+                  margin-top: 6px;
+                }
+              }
+            }
+
+            #top-summary-panel{
+              margin-top: 22px;
+              margin-bottom: 61px;
+            }
+
+            .class-icon-container{
+              display: inline-block;
+              height: 35px;
+              overflow: hidden;
+            }
+
+            h2 {
+              font-family: Jrhand;
+              font-weight: normal;
+
+              &:not(.no-line){
+                padding-bottom: 2px;
+                background-position: 0 bottom;
+                margin-bottom: 6px;
+              }
+
+              a {
+                text-decoration: none;
+                color: #957633;
+              }
+            }
+
+            h2.stats{
+              margin-top: 83px;
+            }
+
+            h1{
+              font: bold 36px Arial;
+            }
+
+            h1.info{
+              font-size: 34px;
+              margin-top: 5px;
+              margin-bottom: 18px;
+
+              .class-icon-container{
+                margin-right: 10px;
+
+                IMG{
+                  width: 45px;
+                }
+              }
+            }
+
+            #avatar-photo-conainer{
+              width: 272px;
+
+              .images-wrapper{
+                background: url(images/profile/students-box.png) 0 0 no-repeat;
+                height: 237px;
+                width: 213px;
+                margin: 0 0 0 20px;
+
+                TABLE {
+                  TBODY{
+                    TR {
+                      TD {
+                        border-color: #757474;
+
+                        .image-container {
+                          width: 52px;
+                          height: 58px;
+
+                          IMG{
+                            width: 58px;
+                            height: 58px;
+                            margin-left: -3px;
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+
+            #student-info-panel, #avatar-photo-conainer{
+              display: inline-block;
+              vertical-align: top;
+            }
+
+            #student-info-panel{
+              width: 426px;
+              overflow: visible;
+
+              .glance-container {
+                margin-left: -14px;
+                margin-top: 25px;
+              }
+            }
+          }
+
+          #avatar-photo-conainer{
+            padding-top: 7px;
           }
 
           .info-page{
@@ -311,7 +479,7 @@ BODY {
             font-size: 24px;
           }
 
-          h2{
+          h2:not(.no-line){
             background: url(images/profile/header-line.png) 0 36px no-repeat;
           }
 
