added attendance summary page

--- a/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
@@ -15,5 +15,5 @@
             +ActionLink('apps', 'list').one-third-button.apps(title="View Apps") Apps
             +ActionLink('settings', 'dashboardTeacher').one-third-button.settings(title="View Settings") Settings
         .buttons-row
-            +ActionLink('attendance', 'list').one-third-button.statistic(title="View Attendance") Attendance
+            +ActionLink('attendance', 'summary').one-third-button.statistic(title="View Attendance") Attendance
             +ActionLink('discipline', 'list').one-third-button.discipline(title="View Discipline") Discipline
