--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -2,6 +2,7 @@
 @import "compass/css3/images";
 @import "compass/css3/transform";
 
+@import "partials/main/_attendance";
 @import "partials/main/_buttons";
 @import "partials/main/_checkboxes";
 @import "partials/main/_images";
