fixed calendar, classes urls, started working on attendance page

--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -140,6 +140,7 @@
         var currentChlkPerson = parseJsonToObj('@ViewData.GetValueOrNull(ViewConstants.CURRENT_PERSON)');
         var classesToFilter = parseJsonToArray('@ViewData.GetValueOrNull(ViewConstants.CLASSES)');
         var classesAdvancedData = parseJsonToArray('@ViewData.GetValueOrNull(ViewConstants.CLASSES_ADV_DATA)');
+        var scriptsRoot = '@Chalkable.Web.Tools.CompilerHelper.ScriptsRoot';
         var classesInfo = {};
         classesAdvancedData && classesAdvancedData.forEach(function (el) {
             classesInfo[el.classid] = {
