--- a/Chalkable.Web/assets/sass/partials/main/_attendance.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_attendance.scss
@@ -150,6 +150,7 @@ BODY {
                   height: 26px;
                   line-height: 26px;
                   text-align: center;
+                  border-width: 1px 0 0 0;
                   color: #2e2e2e;
                   @include background(linear-gradient(top, #f5f5f5, #e0e0e0));
 
