--- a/Chalkable.Web/assets/sass/partials/main/popups/_popups.scss
+++ b/Chalkable.Web/assets/sass/partials/main/popups/_popups.scss
@@ -12,6 +12,11 @@
   &.x-hidden{
     display: none;
   }
+
+
+  &.black{
+    opacity: .85;
+  }
 }
 
 
@@ -105,193 +110,6 @@
       &.centered{
         left: 50%;
         top: 50%;
-      }
-    }
-
-
-
-    &.add-school{
-
-      left: 132px;
-      min-width: 500px;
-
-      .x-window-body{
-        padding: 7px;
-
-        .submit-btn{
-          margin-left: 180px;
-          margin-top: 25px;
-          margin-right: 5px;
-        }
-        .cancel-btn{
-
-        }
-
-        .x-form-field{
-          margin-bottom: 4px;
-          label{
-            width: 125px;
-            display: inline-block;
-            text-align: right;
-            height: 18px;
-            color: #808080;
-            font: normal 14px tahoma, arial, helvetica, sans-serif;
-            padding: 3px;
-            padding-left: 0;
-          }
-
-          #timezoneId{
-            width: 227px;
-          }
-          input{
-            width: 222px;
-            border-radius: 5px;
-
-
-            &.checkbox-last{
-              width: 12px;
-              margin-bottom: 40px;
-            }
-
-          }
-        }
-
-      }
-    }
-
-    &.add-district{
-      min-height: 290px;
-      .x-window-body{
-
-
-        .submit-btn{
-          margin-left: 180px;
-          margin-top: 25px;
-          margin-right: 5px;
-        }
-        .cancel-btn{
-
-        }
-
-        .x-form-field{
-          margin-bottom: 4px;
-          label{
-            width: 125px;
-            display: inline-block;
-            text-align: right;
-            height: 18px;
-            color: #808080;
-            font: normal 14px tahoma, arial, helvetica, sans-serif;
-            padding: 3px;
-            padding-left: 0;
-          }
-
-
-          input{
-            width: 222px;
-            border-radius: 5px;
-          }
-        }
-
-      }
-    }
-
-    &.add-department{
-      min-height: 200px;
-      .x-window-body{
-
-
-
-        .submit-btn{
-          margin-left: 265px;
-          margin-top: 5px;
-          margin-right: 5px;
-        }
-
-        .x-form-field{
-          margin-bottom: 4px;
-          label{
-            width: 125px;
-            display: inline-block;
-            text-align: right;
-            height: 18px;
-            color: #808080;
-            font: normal 14px tahoma, arial, helvetica, sans-serif;
-            padding: 3px;
-            padding-left: 0;
-          }
-          input{
-            width: 312px;
-            border-radius: 5px;
-          }
-        }
-      }
-    }
-
-    &.add-app-category{
-      min-height: 200px;
-      .x-window-body{
-
-
-
-        .submit-btn{
-          margin-left: 265px;
-          margin-top: 5px;
-          margin-right: 5px;
-        }
-
-        .x-form-field{
-          margin-bottom: 4px;
-          label{
-            width: 125px;
-            display: inline-block;
-            text-align: right;
-            height: 18px;
-            color: #808080;
-            font: normal 14px tahoma, arial, helvetica, sans-serif;
-            padding: 3px;
-            padding-left: 0;
-          }
-          input{
-            width: 312px;
-            border-radius: 5px;
-          }
-        }
-      }
-    }
-
-    &.add-app{
-      position: fixed;
-      bottom: 6px;
-      left: 5px;
-      width: 247px;
-      background: url(images/demo/demo-bg.png) 0 0 repeat;
-      height: 79px;
-
-
-      .add, .cancel{
-        margin-top: 8px;
-      }
-
-      .add{
-        margin-right: 20px;
-        margin-left: 6px;
-      }
-
-      button{
-        width: 90px;
-        font-size: 17px;
-        font-weight: bold;
-
-
-
-      }
-
-      input{
-        margin-top: 5px;
-        width: 225px;
-        margin-left: 6px;
-        border-radius: 0;
       }
     }
   }
