--- a/Chalkable.Web/assets/jade/sidebars/DeveloperSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/DeveloperSidebar.jade
@@ -1,4 +1,4 @@
-+ActionLink('apps', 'general')#home-logo
++ActionLink('apps', 'wrapperTest')#home-logo
 #sidebar-controls
     .search-wrapper
         #search-bar
