--- a/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
@@ -114,7 +114,7 @@ BODY {
                       }
                     }
 
-                    .icons, .screenshots{
+                    .icons, .screenshot-pictures, .screenshots{
                       display: inline-block;
                       vertical-align: top;
 
@@ -147,6 +147,8 @@ BODY {
                           &.screenshot-item{
                             width: 170px;
                             height: 104px;
+                            display: inline-block;
+                            float: right;
 
                             img{
                               width: 170px;
