fixed comments in jade.

--- a/Chalkable.Web/assets/jade/activities/signup/SignUps.jade
+++ b/Chalkable.Web/assets/jade/activities/signup/SignUps.jade
@@ -21,7 +21,8 @@
                     .td= item.getPassword()
                     .td= item.getIpAddress()
                     .td= item.getTimeStamp().toString('d/m/y')
-                    .td//= item.getSchoolName()
+                    .td
+                        //= item.getSchoolName()
                     .td= item.getSisUrl()
                     .td= item.getSisUserName()
                     .td= item.getSisPassword()
