added teacher grading settings pages

--- a/Chalkable.Web/assets/jade/activities/settings/TeacherSettings.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/TeacherSettings.jade
@@ -3,7 +3,7 @@
         .container.panel-bg
             .left
                 +ActionLink('settings', 'generalTeacher').pressed General
-                +ActionLink('settings', 'grading') Grading
+                +ActionLink('grading', 'teacherSettings') Grading
             .right
                 +ActionLink('teachers', 'info', currentChlkPerson.id) Profile
 
