--- a/Chalkable.Web/assets/jade/activities/grading/annTypesSettings.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/annTypesSettings.jade
@@ -1,5 +1,6 @@
+gradingTypes = [[1, "A-F"], [0, "100-0"], [2, Msg.Complete + '-' + Msg.Incomplete], [3,Msg.Check.toLowerCase()]];
 #new-items-data.grid-container.not-transparent.items-container.relative
-    each item, i in gradingInfo.getFinalGradeAnnType()
+    each item, i in self.getFinalGradeAnnType()
         div(index=item.getIndex(), class=(item.getValue() ? "active" : "")).announcement-type-item.gradient
             div
                 .left.name=item.getTypeName()
