--- a/Chalkable.Web/assets/jade/activities/setup/TeacherSettings.jade
+++ b/Chalkable.Web/assets/jade/activities/setup/TeacherSettings.jade
@@ -1,9 +1,8 @@
 .setup-page.teacher-settings.loader-container
-    -topData = self.getTopData();
-    -topItems = topData.getTopItems();
-    -selectedIndex = 0;
-    -gradingInfo = self.getGradingInfo();
-    -gradingTypes = [[1, "A-F"], [0, "100-0"], [2, Msg.Complete + '-' + Msg.Incomplete], [3,Msg.Check.toLowerCase()]];
+    topData = self.getTopData();
+    topItems = topData.getTopItems();
+    selectedIndex = 0;
+    gradingInfo = self.getGradingInfo();
     .loader
     +LeftRightToolbar(topItems, chlk.templates.class.TopBar)(
         selectedItemId=gradingInfo.getClazz().getId().valueOf(),
