--- a/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
@@ -11,7 +11,7 @@
             +ActionLink('message', 'page').one-third-button.messages(title="View Messages") Messages
             +ActionLink('students', 'all').one-third-button.people(title="View People") People
         .buttons-row
-            +ActionLink('district', 'list').one-third-button.statistic(title="View Grades") Grades
+            +ActionLink('grading', 'teacherSettings').one-third-button.statistic(title="View Grades") Grades
             +ActionLink('app-market', 'list').one-third-button.apps(title="View Apps") Apps
             +ActionLink('settings', 'dashboardTeacher').one-third-button.settings(title="View Settings") Settings
         .buttons-row
