--- a/Chalkable.Web/assets/jade/activities/announcement/StudentAnnouncement.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/StudentAnnouncement.jade
@@ -13,7 +13,7 @@ student = self.getStudentInfo();
     +Hidden('id', self.getId())
     +Hidden('dropped', isDrop)
     +ActionLink('students', 'info', student.getId()).left.image-container.white.shadow
-        img.avatar.avatar-47(src=student.getPictureUrl())
+        +PersonImg(student, 47)
     .i-b.name-block
         p= student.getFullName()
         if !self.isReadonly()
@@ -24,7 +24,7 @@ student = self.getStudentInfo();
                             .triangle
                             div
                                 div
-                                    img.avatar-24(src=self.getOwnerPictureUrl())
+                                    +PersonImg(self.getOwner(), 24)
                                 div
                                     +TextArea(name="comment").comment-input=self.getComment()
                                     span.enter=Msg.Enter_when_done
