--- a/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
@@ -42,6 +42,7 @@
             +ListView(self.getItems())(
                 selectedIndex = 0
             )#class-attendance-list-panel.people-list
+                needSuggestion = self.getItems().filter(function(item){return item.getType() > valuesEnum.NA.valueOf()}).length == 0;
                 each item, i in self.getItems()
                     needPresent = (i == 0 && item.getType() == valuesEnum.NA.valueOf());
                     .row(class=(i == 0 ? 'selected' : ''), index=i)
@@ -54,7 +55,7 @@
                         .right
                             .student-attendance-container
                                 len = self.getItems().length;
-                                if (i== 5 || (i == len - 1 && len < 6 && len > 2))
+                                if (needSuggestion && (i== 5 || (i == len - 1 && len < 6 && len > 2)))
                                     .keyboard-suggestion
                                 div(class="container-" + item.getClassPersonId().valueOf())
                                     -item.setReasons(self.getReasons());
