--- a/Chalkable.Web/assets/jade/controls/image.jade
+++ b/Chalkable.Web/assets/jade/controls/image.jade
@@ -3,7 +3,7 @@ mixin Image()
     img(attributes)
 
 mixin PersonImg(person, size)
-    if(person.getGender())
+    if(person && person.getGender())
         src = chlk.templates.JadeTemplate.prototype.getPictureURL(person.getId(), size, size);
         isWoman = person.getGender().toLowerCase() == 'f';
         alternativeHref = joinUrls(window.scriptsRoot, 'Content/avatars/' + size + '/.no-avatar');
